# naimatic

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  towncrier.toml
.github/workflows/: changelog.yml  ci.yml  deploy.yml
docs/source/: changelog.rst  conf.py  config.rst  examples.rst  index.rst
docs/source/changes/: 3.feature.rst  8.feature.rst
src/naimatic/: __init__.py  config.py  factory.py  main.py
